  o support for in-source and out-of-source builds for make-based build systems
  o made configure.bat guess x64 as target arch for x64 windows hosts
  o based more sources on portasm
dyncall:
  o fix for ARMv7 Thumb-2 code (tested on iPhone 4 CDMA / iOS 6.0.1)
  o bugfix for -O2 builds for SPARC-v9 and SPARC-v7 
  o bigger refactoring and optimization of mips o32
  o x64 optimization
doc:
  o cleanup of manual and corrections
  o restructured folder layout for documentation
tests:
  o added arm/thumb interwork test suite
REMOVE?
  o updated some PSP makefiles for latest PSPSDK, fixes
  o relaxed overly strict cygwin/msys platform guessing in configure script

Version 0.7
architecture:
  o added subproject: portasm - portable (GNU AS,+Apple and MASM) assembly framework  
  o added subproject: autovar - predefined macro framework (was dyncall_macros.h)
  o added support for sparc (32-bit) (tested on linux/debian,openbsd,solaris)
  o added support for sparc (64-bit) (tested on linux/debian,openbsd,solaris)
  o added support for Solaris and SunPro compiler for i386, x86_64, sparc and sparc64
  o improved auto-detection via preprocessor defines
dyncall updates:
  o uses portasm (GNU,Apple,Microsoft) common sources for x86,x64,ppc32,arm32_arm
  o bug fixes for x64/win64 calling convention
  o added support for mingw32-w64 on x64
  o improved cdecl x86 calling convention: stack always 16 byte aligned
  o updated API and initial support for structs (for x86/AMD64)
  o initial support for syscalls on x86, added x86 int80h linux/bsd
  o added Minix port (stable)
  o optimized vector buffer for small type pushing
  o minor fix for amd64/sysv: alignment to 32-byte
  o bug fix for ppc32/sysv: ellipsis calls work now
  o updated API, introduced DC_CALL_C_ELLIPSIS_VARARGS
  o changed interface: dcMode does not reset internally anymore
dyncallback updates:
  o uses portasm for x86,x64
  o added Solaris/x86/sunpro port (stable)
  o added Minix port (unstable)