@@ -1,3 +1,4 @@
+/* auto-generated by gen-masm.sh */
 .386
 .MODEL FLAT
 .CODE
