@@ -195,6 +195,8 @@
 
 #if defined(DC__OS_Win32) || defined(DC__OS_Win64)
 # define DC_WINDOWS
+#elif defined(DC__OS_Plan9)
+# define DC_PLAN9
 #elif defined(DC__OS_NDS) || defined(DC__OS_PSP)
 # define DC_OTHER
 #else
